# distributed_computing

./: Cargo.toml  README.md  node.proto
dashboard/src/: App.tsx
src/: cloud_scaling.rs  communication_layer.rs  controller_grpc_client.rs  ipfs_storage.rs  load_balancer.rs  main.rs  node.rs  node_controller.rs  node_grpc_server.rs  node_manager.rs  redis_client.rs  resource_manager.rs  task.rs  task_queue.rs  task_tracker.rs  ui.rs  user_manager.rs
