[package]
name = "distributed_computing"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
aws-sdk-ec2 = "0.0.22-alpha"
redis = "0.23"
tonic = { version = "0.7", features = ["transport"] }
prost = "0.9"  # For protocol buffer support

tokio = { version = "1", features = ["full"] }       # Async runtime
rust-ipfs = "0.2.0"                                  # IPFS library for storage
serde = { version = "1.0", features = ["derive"] }   # Serialization/deserialization
serde_json = "1.0"

log = "0.4"
env_logger = "0.9"

[dependencies]
tonic = { version = "0.7", features = ["transport"] }
prost = "0.9"  # For protocol buffer support
tokio = { version = "1", features = ["full"] }


